--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,21 @@
    crossorigin="anonymous">
 </head>
 <body>
-  <app-root></app-root>
+  
+
+     <div class="menu-container">
+        <div class="menu">
+            <div class="Home">Home</div>
+            <div class="register">Register</div>
+            <div class="login">Login</div>
+            <div class="Profile">Profile</div>
+            <div class="logout">Logout</div>
+        </div>
+    </div>
+
+
+
+ 
 </body>
 </html>
+<app-root></app-root>
